# rcde_workshops

./: .buildinfo  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  _config.yml  _toc.yml  build.sh  docker-build.sh  docker-clean.sh  docker-compose.yml  docker-deploy.sh  docker-dev-server.sh  docker-livereload.py  genindex.html  index.html  index.md  objects.inv  references.bib  requirements.txt  search.html  searchindex.js  server.py  server.sh  sitemap.xml
_sources/: index.md
advanced_scheduling/: 00-index.html  00-index.md  01-introduction.html  01-introduction.md  02-cluster.html  02-cluster.md  03-notebooks.html  03-notebooks.md
aica_workshop/: .gitignore  README.md
code/: layered_service_os.pptx
containers/: 00-index.html  00-index.md  01-introduction.html  01-introduction.md  02-cluster.html  02-cluster.md  02-dockers.html  02-dockers.md  03-apptainers.html  03-apptainers.md  03-notebooks.html
csc231/: 01-introduction.md  03-data-representation.md  04-machine-language.md  06-optimizing-program-performance.md
csc331/: 01-introduction.md  02-process.md  08-address-translation.md  13-io-disk-scheduling.md  14-file-systems.md  16-minix.md
csc466/: 01-computational-demand.md  03-intro-openmp.md  06-works-sharing.md  07-intro-mpi.md  09-functional-collectives.md  11-cloudlab.md  12-compute-deployment.md  13-distributed-file-systems.md
csc467/: 00-syllabus.md  01-introduction.md  (+7 more)
llms_rag/: 00-index.html  00-index.md  01_introduction_to_rag.html  01_introduction_to_rag.ipynb  02_document_retrieval_and_embeddings.html  02_document_retrieval_and_embeddings.ipynb  03_building_simple_rag_pipeline.html  03_building_simple_rag_pipeline.ipynb  04_advanced_retrieval_techniques.ipynb  04_graph_rag.html  05_graph_rag.ipynb  06_practical_research_applications.ipynb  07_optional.ipynb  README.md  outline.md  pyproject.toml  setup_conda_gpu.sh  setup_uv.sh  utils.py
llms_rag/data/: demo_corpus.jsonl
(+681 files in other folders)
