[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llms-rag-workshop"
version = "0.1.0"
description = "RAG for Research Applications Workshop"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "RCD Workshops Team", email = "citi-group@clemson.edu"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core ML/AI libraries
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",

    # RAG-specific libraries
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",

    # Data science and utilities
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",

    # Graph processing
    "networkx>=3.0",

    # Jupyter and widgets
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "notebook>=7.0.0",

    # Other utilities
    "tqdm>=4.65.0",
    "ipython>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

gpu = [
    "faiss-gpu>=1.7.4",
]

[project.urls]
Homepage = "https://github.com/clemsonciti/rcde_workshops"
Repository = "https://github.com/clemsonciti/rcde_workshops"
Documentation = "https://clemsonciti.github.io/rcde_workshops/"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
